Prevented customer from placing the same order twice

--- a/src/main/java/Handelsakademin/StoreProgram/OrderForm.form
+++ b/src/main/java/Handelsakademin/StoreProgram/OrderForm.form
@@ -168,14 +168,6 @@
         <properties/>
         <border type="none"/>
         <children>
-          <component id="7511d" class="javax.swing.JList" binding="productCartJList">
-            <constraints>
-              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="2" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="50"/>
-              </grid>
-            </constraints>
-            <properties/>
-          </component>
           <component id="cb59a" class="javax.swing.JLabel">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
@@ -185,6 +177,19 @@
               <text value="Products in cart"/>
             </properties>
           </component>
+          <scrollpane id="830">
+            <constraints>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties/>
+            <border type="none"/>
+            <children>
+              <component id="7511d" class="javax.swing.JList" binding="productCartJList">
+                <constraints/>
+                <properties/>
+              </component>
+            </children>
+          </scrollpane>
         </children>
       </grid>
       <grid id="1095c" layout-manager="GridLayoutManager" row-count="4" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
