--- a/src/main/java/Handelsakademin/StoreProgram/LoginForm.form
+++ b/src/main/java/Handelsakademin/StoreProgram/LoginForm.form
@@ -35,7 +35,7 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <font name="Bayland" size="30" style="0"/>
+              <font name="Forte" size="36" style="2"/>
               <foreground color="-58473"/>
               <text value="WICCA"/>
             </properties>
@@ -164,6 +164,7 @@
                     </constraints>
                     <properties>
                       <background color="-1146675"/>
+                      <font name="Forte" style="0"/>
                       <text value="Login"/>
                     </properties>
                   </component>
@@ -178,6 +179,7 @@
                     </constraints>
                     <properties>
                       <background color="-1146675"/>
+                      <font name="Forte" style="0"/>
                       <text value="Create new user"/>
                     </properties>
                   </component>
