Customer can now cancel orders before they are shipped

--- a/src/main/java/Handelsakademin/StoreProgram/OrderHistoryForm.form
+++ b/src/main/java/Handelsakademin/StoreProgram/OrderHistoryForm.form
@@ -72,7 +72,7 @@
         <border type="none"/>
         <children/>
       </grid>
-      <grid id="65c7b" layout-manager="GridLayoutManager" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="65c7b" layout-manager="GridLayoutManager" row-count="6" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="20"/>
         <constraints>
           <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -171,6 +171,22 @@
               </component>
             </children>
           </grid>
+          <component id="b67f6" class="javax.swing.JButton" binding="cancelButton">
+            <constraints>
+              <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Cancel order"/>
+            </properties>
+          </component>
+          <component id="854d4" class="javax.swing.JLabel" binding="messageLabel">
+            <constraints>
+              <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value=""/>
+            </properties>
+          </component>
         </children>
       </grid>
       <grid id="39d10" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
