--- a/src/main/java/Handelsakademin/StoreProgram/SoldProductsForm.form
+++ b/src/main/java/Handelsakademin/StoreProgram/SoldProductsForm.form
@@ -62,7 +62,7 @@
                 <properties>
                   <background color="-1146675"/>
                   <font name="Forte" style="2"/>
-                  <foreground color="-1537"/>
+                  <foreground color="-13947600"/>
                   <text value="Go back"/>
                 </properties>
               </component>
