--- a/src/main/java/Handelsakademin/StoreProgram/CreateCustomerForm.form
+++ b/src/main/java/Handelsakademin/StoreProgram/CreateCustomerForm.form
@@ -183,6 +183,7 @@
             </constraints>
             <properties>
               <background color="-1146675"/>
+              <font name="Forte" style="0"/>
               <text value="Create"/>
             </properties>
           </component>
@@ -234,6 +235,7 @@
             </constraints>
             <properties>
               <background color="-1146675"/>
+              <font name="Forte" style="0"/>
               <text value="Go back"/>
             </properties>
           </component>
