--- a/src/main/java/Handelsakademin/StoreProgram/CreateProductForm.form
+++ b/src/main/java/Handelsakademin/StoreProgram/CreateProductForm.form
@@ -105,6 +105,7 @@
                 </constraints>
                 <properties>
                   <background color="-1146675"/>
+                  <font name="Forte" style="0"/>
                   <text value="Create product"/>
                 </properties>
               </component>
@@ -147,6 +148,7 @@
             </constraints>
             <properties>
               <background color="-1146675"/>
+              <font name="Forte" style="0"/>
               <text value="Go back"/>
             </properties>
           </component>
@@ -192,7 +194,7 @@
                           </grid>
                         </constraints>
                         <properties>
-                          <background color="-1537"/>
+                          <background color="-1"/>
                           <model/>
                           <selectionBackground color="-1146675"/>
                         </properties>
