--- a/src/main/java/Handelsakademin/StoreProgram/EditProductForm.form
+++ b/src/main/java/Handelsakademin/StoreProgram/EditProductForm.form
@@ -242,6 +242,7 @@
                   <component id="ecaf8" class="javax.swing.JList" binding="existingProductJList">
                     <constraints/>
                     <properties>
+                      <background color="-1"/>
                       <selectionBackground color="-1146675"/>
                     </properties>
                   </component>
