--- a/src/main/java/Handelsakademin/StoreProgram/EmployeeForm.form
+++ b/src/main/java/Handelsakademin/StoreProgram/EmployeeForm.form
@@ -6,7 +6,7 @@
       <xy x="20" y="20" width="640" height="400"/>
     </constraints>
     <properties>
-      <background color="-1247233"/>
+      <background color="-1537"/>
     </properties>
     <border type="none"/>
     <children>
@@ -16,7 +16,7 @@
           <grid row="1" column="0" row-span="2" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <background color="-1509377"/>
+          <background color="-1537"/>
         </properties>
         <border type="none"/>
         <children/>
@@ -37,7 +37,7 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <background color="-1509377"/>
+              <background color="-1537"/>
             </properties>
             <border type="none"/>
             <children>
@@ -47,6 +47,7 @@
                 </constraints>
                 <properties>
                   <background color="-1146675"/>
+                  <font name="Forte" style="0"/>
                   <text value="Create new employee"/>
                 </properties>
               </component>
@@ -56,6 +57,7 @@
                 </constraints>
                 <properties>
                   <background color="-1146675"/>
+                  <font name="Forte" style="0"/>
                   <text value="Go to inventory"/>
                 </properties>
               </component>
@@ -65,6 +67,7 @@
                 </constraints>
                 <properties>
                   <background color="-1146675"/>
+                  <font name="Forte" style="0"/>
                   <text value="Create new product"/>
                 </properties>
               </component>
@@ -74,7 +77,7 @@
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <background color="-1509377"/>
+                  <background color="-1537"/>
                 </properties>
                 <border type="none"/>
                 <children/>
@@ -85,6 +88,7 @@
                 </constraints>
                 <properties>
                   <background color="-1146675"/>
+                  <font name="Forte" style="0"/>
                   <text value="Edit product"/>
                 </properties>
               </component>
@@ -96,7 +100,7 @@
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <background color="-1509377"/>
+              <background color="-1537"/>
             </properties>
             <border type="none"/>
             <children>
@@ -106,6 +110,7 @@
                 </constraints>
                 <properties>
                   <background color="-1146675"/>
+                  <font name="Forte" style="0"/>
                   <text value="Sold products"/>
                 </properties>
               </component>
@@ -123,6 +128,7 @@
           <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <font name="Forte" style="0"/>
           <foreground color="-58473"/>
           <text value="Firstname Lastname"/>
         </properties>
@@ -133,6 +139,7 @@
         </constraints>
         <properties>
           <background color="-1146675"/>
+          <font name="Forte" style="0"/>
           <text value="Change profile"/>
         </properties>
       </component>
@@ -142,7 +149,7 @@
           <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <background color="-1509377"/>
+          <background color="-1537"/>
         </properties>
         <border type="none"/>
         <children/>
@@ -153,7 +160,7 @@
           <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <background color="-1509377"/>
+          <background color="-1537"/>
         </properties>
         <border type="none"/>
         <children>
@@ -163,7 +170,7 @@
             </constraints>
             <properties>
               <font size="20"/>
-              <foreground color="-58473"/>
+              <foreground color="-13947600"/>
               <text value="Admin"/>
             </properties>
           </component>
@@ -175,7 +182,7 @@
           <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <background color="-1509377"/>
+          <background color="-1537"/>
         </properties>
         <border type="none"/>
         <children>
@@ -185,6 +192,7 @@
             </constraints>
             <properties>
               <background color="-1146675"/>
+              <font name="Forte" style="0"/>
               <text value="Log out"/>
             </properties>
           </component>
@@ -194,7 +202,7 @@
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <background color="-1509377"/>
+              <background color="-1537"/>
             </properties>
             <border type="none"/>
             <children/>
@@ -207,7 +215,7 @@
           <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <background color="-1509377"/>
+          <background color="-1537"/>
         </properties>
         <border type="none"/>
         <children/>
