--- a/src/main/java/Handelsakademin/StoreProgram/InventoryForm.form
+++ b/src/main/java/Handelsakademin/StoreProgram/InventoryForm.form
@@ -6,7 +6,7 @@
       <xy x="20" y="20" width="592" height="400"/>
     </constraints>
     <properties>
-      <background color="-1509377"/>
+      <background color="-1537"/>
     </properties>
     <border type="none"/>
     <children>
@@ -16,7 +16,7 @@
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <background color="-1509377"/>
+          <background color="-1537"/>
         </properties>
         <border type="none"/>
         <children>
@@ -25,6 +25,7 @@
               <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <font name="Forte" style="0"/>
               <foreground color="-58473"/>
               <text value="Firstname Lastname"/>
             </properties>
@@ -47,7 +48,7 @@
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <background color="-1509377"/>
+          <background color="-1537"/>
         </properties>
         <border type="none"/>
         <children/>
@@ -58,7 +59,7 @@
           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <background color="-1509377"/>
+          <background color="-1537"/>
         </properties>
         <border type="none"/>
         <children>
@@ -68,6 +69,7 @@
             </constraints>
             <properties>
               <background color="-1146675"/>
+              <font name="Forte" style="0"/>
               <text value="Go back"/>
             </properties>
           </component>
@@ -89,7 +91,7 @@
           <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <background color="-1509377"/>
+          <background color="-1537"/>
         </properties>
         <border type="none"/>
         <children>
@@ -100,7 +102,7 @@
             <properties>
               <background color="-1509377"/>
               <font size="20"/>
-              <foreground color="-58473"/>
+              <foreground color="-13947600"/>
               <text value="Inventory"/>
             </properties>
           </component>
@@ -112,7 +114,7 @@
           <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <background color="-1509377"/>
+          <background color="-1537"/>
         </properties>
         <border type="none"/>
         <children/>
@@ -123,7 +125,7 @@
           <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <background color="-1509377"/>
+          <background color="-1537"/>
         </properties>
         <border type="none"/>
         <children/>
@@ -134,7 +136,7 @@
           <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <background color="-1509377"/>
+          <background color="-1537"/>
         </properties>
         <border type="none"/>
         <children>
@@ -152,7 +154,7 @@
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <background color="-1509377"/>
+              <background color="-1537"/>
             </properties>
             <border type="none"/>
             <children>
@@ -168,13 +170,16 @@
                 <constraints>
                   <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                 </constraints>
-                <properties/>
+                <properties>
+                  <background color="-1537"/>
+                </properties>
                 <border type="none"/>
                 <children>
                   <component id="79ce0" class="javax.swing.JList" binding="chosenOrderList">
                     <constraints/>
                     <properties>
-                      <background color="-1509377"/>
+                      <background color="-1"/>
+                      <selectionBackground color="-1146675"/>
                     </properties>
                   </component>
                 </children>
@@ -187,7 +192,7 @@
               <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <background color="-1509377"/>
+              <background color="-1537"/>
             </properties>
             <border type="none"/>
             <children>
@@ -197,7 +202,7 @@
                   <grid row="0" column="0" row-span="1" col-span="3" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <background color="-1509377"/>
+                  <background color="-1537"/>
                 </properties>
                 <border type="none"/>
                 <children>
@@ -224,6 +229,7 @@
                 </constraints>
                 <properties>
                   <background color="-1146675"/>
+                  <font name="Forte" style="0"/>
                   <text value="Change status"/>
                 </properties>
               </component>
@@ -241,6 +247,7 @@
                 </constraints>
                 <properties>
                   <background color="-1146675"/>
+                  <font name="Forte" style="0"/>
                   <text value="Send transport"/>
                 </properties>
               </component>
@@ -254,7 +261,7 @@
           <grid row="1" column="3" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <background color="-1509377"/>
+          <background color="-1537"/>
         </properties>
         <border type="none"/>
         <children/>
@@ -264,7 +271,7 @@
           <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <background color="-1509377"/>
+          <background color="-1537"/>
         </properties>
         <border type="none"/>
         <children>
@@ -272,7 +279,7 @@
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints/>
             <properties>
-              <background color="-1509377"/>
+              <background color="-1537"/>
             </properties>
             <border type="none"/>
             <children>
@@ -283,7 +290,8 @@
                   </grid>
                 </constraints>
                 <properties>
-                  <background color="-1509377"/>
+                  <background color="-1"/>
+                  <selectionBackground color="-1146675"/>
                 </properties>
               </component>
               <component id="d682e" class="javax.swing.JLabel">
