--- a/src/main/java/Handelsakademin/StoreProgram/OrderForm.form
+++ b/src/main/java/Handelsakademin/StoreProgram/OrderForm.form
@@ -5,7 +5,9 @@
     <constraints>
       <xy x="20" y="20" width="762" height="699"/>
     </constraints>
-    <properties/>
+    <properties>
+      <background color="-1537"/>
+    </properties>
     <border type="none"/>
     <children>
       <grid id="190ba" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
@@ -13,7 +15,9 @@
         <constraints>
           <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-1537"/>
+        </properties>
         <border type="none"/>
         <children/>
       </grid>
@@ -22,7 +26,9 @@
         <constraints>
           <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-1537"/>
+        </properties>
         <border type="none"/>
         <children>
           <component id="8c8b0" class="javax.swing.JLabel" binding="productNameLabel">
@@ -38,7 +44,9 @@
             <constraints>
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
-            <properties/>
+            <properties>
+              <background color="-1537"/>
+            </properties>
             <border type="none"/>
             <children>
               <component id="4c577" class="javax.swing.JLabel">
@@ -92,7 +100,9 @@
         <constraints>
           <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-1537"/>
+        </properties>
         <border type="none"/>
         <children/>
       </grid>
@@ -101,7 +111,9 @@
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-1537"/>
+        </properties>
         <border type="none"/>
         <children>
           <component id="ff640" class="javax.swing.JLabel" binding="customerNameLabel">
@@ -109,7 +121,8 @@
               <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <foreground color="-1146675"/>
+              <font name="Forte" style="0"/>
+              <foreground color="-58473"/>
               <text value="Firstname Lastname"/>
             </properties>
           </component>
@@ -130,7 +143,9 @@
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-1537"/>
+        </properties>
         <border type="none"/>
         <children/>
       </grid>
@@ -139,7 +154,9 @@
         <constraints>
           <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-1537"/>
+        </properties>
         <border type="none"/>
         <children>
           <component id="7d7a4" class="javax.swing.JLabel">
@@ -165,7 +182,9 @@
         <constraints>
           <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-1537"/>
+        </properties>
         <border type="none"/>
         <children/>
       </grid>
@@ -174,7 +193,9 @@
         <constraints>
           <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-1537"/>
+        </properties>
         <border type="none"/>
         <children>
           <component id="cb59a" class="javax.swing.JLabel">
@@ -190,12 +211,17 @@
             <constraints>
               <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
-            <properties/>
+            <properties>
+              <background color="-1537"/>
+            </properties>
             <border type="none"/>
             <children>
               <component id="7511d" class="javax.swing.JList" binding="productCartJList">
                 <constraints/>
-                <properties/>
+                <properties>
+                  <background color="-1"/>
+                  <selectionBackground color="-1146675"/>
+                </properties>
               </component>
             </children>
           </scrollpane>
@@ -204,7 +230,9 @@
             <constraints>
               <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
-            <properties/>
+            <properties>
+              <background color="-1537"/>
+            </properties>
             <border type="none"/>
             <children>
               <component id="f701c" class="javax.swing.JButton" binding="removeItemButton" default-binding="true">
@@ -225,7 +253,9 @@
             <constraints>
               <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
-            <properties/>
+            <properties>
+              <background color="-1537"/>
+            </properties>
             <border type="none"/>
             <children/>
           </grid>
@@ -234,7 +264,9 @@
             <constraints>
               <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
-            <properties/>
+            <properties>
+              <background color="-1537"/>
+            </properties>
             <border type="none"/>
             <children/>
           </grid>
@@ -245,7 +277,9 @@
         <constraints>
           <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-1537"/>
+        </properties>
         <border type="none"/>
         <children>
           <component id="2b8d6" class="javax.swing.JButton" binding="placeOrderButton">
