--- a/src/main/java/Handelsakademin/StoreProgram/ShoppingForm.form
+++ b/src/main/java/Handelsakademin/StoreProgram/ShoppingForm.form
@@ -5,7 +5,9 @@
     <constraints>
       <xy x="20" y="20" width="641" height="493"/>
     </constraints>
-    <properties/>
+    <properties>
+      <background color="-1537"/>
+    </properties>
     <border type="none"/>
     <children>
       <grid id="5318e" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
@@ -13,7 +15,9 @@
         <constraints>
           <grid row="1" column="4" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-1537"/>
+        </properties>
         <border type="none"/>
         <children/>
       </grid>
@@ -22,7 +26,9 @@
         <constraints>
           <grid row="4" column="4" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-1537"/>
+        </properties>
         <border type="none"/>
         <children/>
       </grid>
@@ -31,7 +37,9 @@
         <constraints>
           <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-1537"/>
+        </properties>
         <border type="none"/>
         <children>
           <component id="261a9" class="javax.swing.JLabel">
@@ -48,7 +56,9 @@
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
-            <properties/>
+            <properties>
+              <background color="-1537"/>
+            </properties>
             <border type="none"/>
             <children/>
           </grid>
@@ -59,7 +69,9 @@
         <constraints>
           <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-1537"/>
+        </properties>
         <border type="none"/>
         <children>
           <component id="e57b9" class="javax.swing.JLabel">
@@ -161,7 +173,9 @@
         <constraints>
           <grid row="4" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-1537"/>
+        </properties>
         <border type="none"/>
         <children>
           <grid id="ac11" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
@@ -169,7 +183,9 @@
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
-            <properties/>
+            <properties>
+              <background color="-1537"/>
+            </properties>
             <border type="none"/>
             <children/>
           </grid>
@@ -180,7 +196,9 @@
         <constraints>
           <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-1537"/>
+        </properties>
         <border type="none"/>
         <children>
           <hspacer id="d724e">
@@ -208,7 +226,8 @@
               <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <foreground color="-1146675"/>
+              <font name="Forte" style="0"/>
+              <foreground color="-58473"/>
               <text value="Firstname Lastname"/>
             </properties>
           </component>
@@ -229,7 +248,9 @@
         <constraints>
           <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-1537"/>
+        </properties>
         <border type="none"/>
         <children/>
       </grid>
@@ -238,7 +259,9 @@
         <constraints>
           <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-1537"/>
+        </properties>
         <border type="none"/>
         <children>
           <grid id="4c112" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
@@ -246,7 +269,9 @@
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
-            <properties/>
+            <properties>
+              <background color="-1537"/>
+            </properties>
             <border type="none"/>
             <children>
               <component id="77fd2" class="javax.swing.JButton" binding="logOutButton">
@@ -268,7 +293,9 @@
         <constraints>
           <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-1537"/>
+        </properties>
         <border type="none"/>
         <children/>
       </grid>
@@ -277,7 +304,9 @@
         <constraints>
           <grid row="3" column="3" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-1537"/>
+        </properties>
         <border type="none"/>
         <children/>
       </grid>
@@ -286,7 +315,9 @@
         <constraints>
           <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-1537"/>
+        </properties>
         <border type="none"/>
         <children/>
       </grid>
@@ -294,13 +325,17 @@
         <constraints>
           <grid row="3" column="4" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-1537"/>
+        </properties>
         <border type="none"/>
         <children>
           <grid id="b6492" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints/>
-            <properties/>
+            <properties>
+              <background color="-1537"/>
+            </properties>
             <border type="none"/>
             <children>
               <component id="26ba6" class="javax.swing.JList" binding="productJList">
@@ -309,7 +344,9 @@
                     <preferred-size width="150" height="50"/>
                   </grid>
                 </constraints>
-                <properties/>
+                <properties>
+                  <background color="-1"/>
+                </properties>
               </component>
               <component id="1d203" class="javax.swing.JLabel">
                 <constraints>
@@ -328,7 +365,9 @@
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-1537"/>
+        </properties>
         <border type="none"/>
         <children/>
       </grid>
@@ -337,7 +376,9 @@
         <constraints>
           <grid row="3" column="5" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-1537"/>
+        </properties>
         <border type="none"/>
         <children/>
       </grid>
