--- a/src/main/java/Handelsakademin/StoreProgram/SoldProductsForm.form
+++ b/src/main/java/Handelsakademin/StoreProgram/SoldProductsForm.form
@@ -38,7 +38,8 @@
                   <component id="834e9" class="javax.swing.JList" binding="transportJList">
                     <constraints/>
                     <properties>
-                      <background color="-1537"/>
+                      <background color="-1"/>
+                      <selectionBackground color="-1146675"/>
                     </properties>
                   </component>
                 </children>
@@ -61,7 +62,7 @@
                 </constraints>
                 <properties>
                   <background color="-1146675"/>
-                  <font name="Forte" style="2"/>
+                  <font name="Forte" style="0"/>
                   <foreground color="-13947600"/>
                   <text value="Go back"/>
                 </properties>
@@ -113,7 +114,8 @@
               <component id="defc9" class="javax.swing.JList" binding="soldProductsList">
                 <constraints/>
                 <properties>
-                  <background color="-1537"/>
+                  <background color="-1"/>
+                  <selectionBackground color="-1146675"/>
                 </properties>
               </component>
             </children>
@@ -133,7 +135,7 @@
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <font name="Forte" style="2"/>
+                  <font name="Forte" style="0"/>
                   <foreground color="-58473"/>
                   <text value=""/>
                 </properties>
