--- a/src/main/java/Handelsakademin/StoreProgram/TransportForm.form
+++ b/src/main/java/Handelsakademin/StoreProgram/TransportForm.form
@@ -26,7 +26,7 @@
             </constraints>
             <properties>
               <font name="Forte" style="2"/>
-              <foreground color="-28193"/>
+              <foreground color="-58473"/>
               <text value="Firstname Lastname"/>
             </properties>
           </component>
@@ -204,8 +204,9 @@
               <component id="774b6" class="javax.swing.JList" binding="transportOrderList">
                 <constraints/>
                 <properties>
-                  <background color="-1537"/>
+                  <background color="-1"/>
                   <model/>
+                  <selectionBackground color="-1146675"/>
                 </properties>
               </component>
             </children>
@@ -271,7 +272,8 @@
               <component id="ee0f8" class="javax.swing.JList" binding="ordersReadyToShipList">
                 <constraints/>
                 <properties>
-                  <background color="-1537"/>
+                  <background color="-1"/>
+                  <selectionBackground color="-1146675"/>
                 </properties>
               </component>
             </children>
